documentation updated, run.sh added, three more buttons observed in JFX-project